<?xml version="1.0"?>
<package>
  <name>serial</name>
  <version>0.0.0</version>
  <description>The serial package</description>

  <maintainer email="dyx@todo.todo">dyx</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>nodelet</run_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>
</package>
